Consider `g_log_always_fatal` for aborting in `g_log_structured_array()`
Consider g_log_always_fatal
for aborting in g_log_structured_array()
.
Currently, if an app is using custom structured logging, setting G_DEBUG=fatal-criticals
(and similar) doesn't abort the application when something critical is logged.
So if if (log_level & (G_LOG_FATAL_MASK | g_log_always_fatal))...
is used instead of if (log_level & G_LOG_FATAL_MASK)...
in g_log_structured_array()
users overriding structured logging shall not have to deal with this (ie, setting breakpoint/aborting the app where each OS may have their own way to handle this).
And for those who don't want this, they can simply use g_log_set_fatal_mask()
API or similar.
Creating an issue, instead of an MR, since this is a change of behavior.
thanks