gmessages: Add 'g_log_get_always_fatal()' for use in custom log writers

Fixes: https://gitlab.gnome.org/GNOME/glib/-/issues/2544